# secoc-can-toolkit

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LICENSE  Readme.md  build.ninja  cmake_install.cmake  secoc_cli
apps/can_cli/: main.cpp
include/: CanEngine.h  CanTypes.h  FreshnessManager.h  SecOcEngine.h  SecOcTypes.h  SecOc_AutosarApi.h
src/: CanEngine.cpp  FreshnessManager.cpp  SecOcEngine.cpp  SecOc_AutosarApi.cpp
